--- a/notebooks/download_other_wildlife.ipynb
+++ b/notebooks/download_other_wildlife.ipynb
@@ -64,6 +64,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -28458,6 +28465,45 @@
     "                          cache_path='../dataset/dataframe/cache_turtles.csv',\n",
     "                          only_cache=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cache file concatenation\n",
+    "\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "cache_raptors = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_raptors.csv')\n",
+    "cache_birdIndividual = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_BirdIndividualID.csv')\n",
+    "cache_atrw = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_ATRW.csv')\n",
+    "cache_whaleshark = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_whaleshark.csv')\n",
+    "\n",
+    "cache_raptors['wildlife_name'] = 'raptors'\n",
+    "cache_raptors['path'] = cache_raptors['path'].apply(lambda x: os.path.join('raptor_individuals_cropped', x))\n",
+    "\n",
+    "\n",
+    "cache_birdIndividual['wildlife_name'] = 'BirdIndividualID'\n",
+    "cache_birdIndividual['path'] = cache_birdIndividual['path'].apply(lambda x: os.path.join('BirdIndividualID', x))\n",
+    "\n",
+    "cache_atrw['wildlife_name'] = 'ATRW'\n",
+    "cache_atrw['path'] = cache_atrw['path'].apply(lambda x: os.path.join('ATRW', x))\n",
+    "\n",
+    "cache_whaleshark['wildlife_name'] = 'whaleshark'\n",
+    "cache_whaleshark['path'] = cache_whaleshark['path'].apply(lambda x: os.path.join('EDA-Whaleshark', x))\n",
+    "\n",
+    "cache_birds = pd.concat([cache_raptors, cache_birdIndividual, cache_atrw, cache_whaleshark], ignore_index=True)\n",
+    "cache_birds.to_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_multispecies.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
