--- a/notebooks/download_Birddataset.ipynb
+++ b/notebooks/download_Birddataset.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = WildlifeReidDataModule(metadata=dataset.df, config=config)"
+    "data = WildlifeDataModule(metadata=dataset.df, config=config)"
    ]
   },
   {
