--- a/notebooks/combine_datasets.ipynb
+++ b/notebooks/combine_datasets.ipynb
@@ -15,7 +15,56 @@
     "\n",
     "datasets_cloud = '/Users/amee/Library/Mobile Documents/com~apple~CloudDocs/wildlife-datasets/'\n",
     "path = os.path.join(datasets_cloud, 'SeaTurtleID2022')\n",
+    "path_ATRW = '/Users/amee/Documents/code/master-thesis/datasets/ATRW/'\n",
     "# path = '/Users/amee/Documents/code/master-thesis/datasets/GiraffeZebraID/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "cache_raptors = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_raptors.csv')\n",
+    "cache_birdIndividual = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_BirdIndividualID.csv')\n",
+    "cache_ATRW = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_ATRW.csv')\n",
+    "cache_whaleshark = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_EDAwhaleshark.csv')\n",
+    "# cache_seal = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/SealID_cache.csv')\n",
+    "\n",
+    "cache_raptors['wildlife_name'] = 'raptors'\n",
+    "cache_raptors['path'] = cache_raptors['path'].apply(lambda x: os.path.join('raptor_individuals_cropped', x))\n",
+    "\n",
+    "\n",
+    "cache_birdIndividual['wildlife_name'] = 'BirdIndividualID'\n",
+    "cache_birdIndividual['path'] = cache_birdIndividual['path'].apply(lambda x: os.path.join('BirdIndividualID', x))\n",
+    "\n",
+    "cache_ATRW['wildlife_name'] = 'ATRW'\n",
+    "cache_ATRW['path'] = cache_ATRW['path'].apply(lambda x: os.path.join('ATRW', x))\n",
+    "\n",
+    "cache_whaleshark['wildlife_name'] = 'whaleshark'\n",
+    "cache_whaleshark['path'] = cache_whaleshark['path'].apply(lambda x: os.path.join('EDA-whaleshark', x))\n",
+    "\n",
+    "cache_multispecies = pd.concat([cache_raptors, cache_birdIndividual, cache_ATRW, cache_whaleshark], ignore_index=True)\n",
+    "cache_multispecies.to_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_multispecies.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "\n",
+    "from wildlife_datasets import analysis, datasets, loader\n",
+    "\n",
+    "sys.path.append('..')\n",
+    "dataset = datasets.WhaleSharkID('/Users/amee/Documents/code/master-thesis/datasets/EDA-Whaleshark/')\n",
+    "dataset.df"
    ]
   },
   {
@@ -25,9 +74,17 @@
    "outputs": [],
    "source": [
     "from data.wildlife_dataset import WildlifeDataModule\n",
+    "# (self, metadata, config = None, data_dir=\"\", preprocess_lvl=0, batch_size=8, size=256, mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225], num_workers=2, cache_path=\"../dataset/dataframe/cache.csv\", animal_cat='bird', splitter ='closed', only_cache=False):\n",
     "\n",
-    "dataset1 = datasets.SeaTurtleID2022(path)\n",
-    "data = WildlifeDataModule(metadata=df,data_dir=path, animal_cat=\"reptile\", preprocess_lvl=2)\n"
+    "\n",
+    "data = WildlifeDataModule(metadata=dataset.df[:], \n",
+    "                              data_dir = '/Users/amee/Documents/code/master-thesis/datasets/EDA-whaleshark/', \n",
+    "                              cache_path= '../dataset/dataframe/cache_whaleshark.csv',\n",
+    "                              preprocess_lvl=3,\n",
+    "                              size=224,\n",
+    "                              animal_cat='fish',\n",
+    "                              only_cache=True\n",
+    "                              )\n"
    ]
   },
   {
