--- a/notebooks/download_wildlifedatasets.ipynb
+++ b/notebooks/download_wildlifedatasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -13,17 +13,19 @@
      ]
     },
     {
-     "ename": "Exception",
-     "evalue": "URL must be provided for SealID.\nCheck https://wildlifedatasets.github.io/wildlife-datasets/downloads/#sealid",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m datasets_local \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/amee/Documents/code/master-thesis/datasets\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      9\u001b[0m path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(datasets_local, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSealID\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 10\u001b[0m \u001b[43mdatasets\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSealID\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/pytorch_env/lib/python3.12/site-packages/wildlife_datasets/datasets/datasets.py:78\u001b[0m, in \u001b[0;36mDatasetFactory.get_data\u001b[0;34m(cls, root, force, **kwargs)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDATASET \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m: DOWNLOADING STARTED.\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m dataset_name)\n\u001b[0;32m---> 78\u001b[0m     \u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdownload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mroot\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mforce\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mforce\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     79\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDATASET \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m: EXTRACTING STARTED.\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m dataset_name)\n\u001b[1;32m     80\u001b[0m     \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mextract(root,  \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[0;32m~/miniconda3/envs/pytorch_env/lib/python3.12/site-packages/wildlife_datasets/datasets/datasets.py:96\u001b[0m, in \u001b[0;36mDatasetFactory.download\u001b[0;34m(cls, root, force, **kwargs)\u001b[0m\n\u001b[1;32m     94\u001b[0m     os\u001b[38;5;241m.\u001b[39mremove(mark_file_name)\n\u001b[1;32m     95\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m utils\u001b[38;5;241m.\u001b[39mdata_directory(root):\n\u001b[0;32m---> 96\u001b[0m     \u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_download\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     97\u001b[0m \u001b[38;5;28mopen\u001b[39m(mark_file_name, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     98\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mcls\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmetadata\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlicenses_url\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mmetadata:\n",
-      "File \u001b[0;32m~/miniconda3/envs/pytorch_env/lib/python3.12/site-packages/wildlife_datasets/datasets/datasets.py:1955\u001b[0m, in \u001b[0;36mSealID._download\u001b[0;34m(cls, url)\u001b[0m\n\u001b[1;32m   1952\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m   1953\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_download\u001b[39m(\u001b[38;5;28mcls\u001b[39m, url\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m   1954\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m url \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1955\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m(\u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mURL must be provided for SealID.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mCheck https://wildlifedatasets.github.io/wildlife-datasets/downloads/#sealid\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m   1956\u001b[0m     utils\u001b[38;5;241m.\u001b[39mdownload_url(url, \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39marchive)\n",
-      "\u001b[0;31mException\u001b[0m: URL must be provided for SealID.\nCheck https://wildlifedatasets.github.io/wildlife-datasets/downloads/#sealid"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "download?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3NDQ1MTE5NDIsImRhdGFzZXQiOiIyMmI1MTkxZS1mMjRiLTQ0NTctOTNkMy05NTc5N2M5MDBmYzAiLCJwYWNrYWdlIjoiMjJiNTE5MWUtZjI0Yi00NDU3LTkzZDMtOTU3OTdjOTAwZmMwX2lla2JxOW1rLnppcCIsImdlbmVyYXRlZF9ieSI6ImIyZDk0ZDQ5LTIwNjAtNDAzOC05MDcwLWY0YTdhZGNlMTFhMiIsInJhbmRvbV9zYWx0IjoiNjI3ZTc2NjcifQ.6sMg5XeUsS5KeSgSFumkMUk0GZDojKb6MQDz4L_2Jds: 1.82GB [01:43, 17.6MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATASET SealID: EXTRACTING STARTED.\n",
+      "DATASET SealID: FINISHED.\n",
+      "\n"
      ]
     }
    ],
@@ -37,7 +39,122 @@
     "\n",
     "datasets_local = '/Users/amee/Documents/code/master-thesis/datasets'\n",
     "path = os.path.join(datasets_local, 'SealID')\n",
-    "datasets.SealID.get_data(path )"
+    "datasets.SealID.get_data(path, url=\"https://download.fairdata.fi:443/download?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3NDQ1MTE5NDIsImRhdGFzZXQiOiIyMmI1MTkxZS1mMjRiLTQ0NTctOTNkMy05NTc5N2M5MDBmYzAiLCJwYWNrYWdlIjoiMjJiNTE5MWUtZjI0Yi00NDU3LTkzZDMtOTU3OTdjOTAwZmMwX2lla2JxOW1rLnppcCIsImdlbmVyYXRlZF9ieSI6ImIyZDk0ZDQ5LTIwNjAtNDAzOC05MDcwLWY0YTdhZGNlMTFhMiIsInJhbmRvbV9zYWx0IjoiNjI3ZTc2NjcifQ.6sMg5XeUsS5KeSgSFumkMUk0GZDojKb6MQDz4L_2Jds\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATASET SeaTurtleID2022: DOWNLOADING STARTED.\n",
+      "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.7.4.2 / client 1.6.14)\n",
+      "Dataset URL: https://www.kaggle.com/datasets/wildlifedatasets/seaturtleid2022\n",
+      "License(s): other\n",
+      "Downloading seaturtleid2022.zip to /Users/amee/Documents/code/master-thesis/datasets/SeaTurtleID2022\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1.64G/1.64G [01:31<00:00, 19.2MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "DATASET SeaTurtleID2022: EXTRACTING STARTED.\n",
+      "DATASET SeaTurtleID2022: FINISHED.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = os.path.join(datasets_local, 'SeaTurtleID2022')\n",
+    "datasets.SeaTurtleID2022.get_data(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATASET NyalaData: DOWNLOADING STARTED.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "main.zip: 495MB [00:25, 19.7MB/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATASET NyalaData: EXTRACTING STARTED.\n",
+      "DATASET NyalaData: FINISHED.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = os.path.join(datasets_local, 'NyalaData')\n",
+    "datasets.NyalaData.get_data(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATASET NDD20: DOWNLOADING STARTED.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22774175: 2.44GB [02:04, 19.6MB/s]                               \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATASET NDD20: EXTRACTING STARTED.\n",
+      "DATASET NDD20: FINISHED.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yaml\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append('..')\n",
+    "\n",
+    "from wildlife_datasets import analysis, datasets, loader\n",
+    "\n",
+    "datasets_local = '/Users/amee/Documents/code/master-thesis/datasets'\n",
+    "path = os.path.join(datasets_local, 'NDD20')\n",
+    "datasets.NDD20.get_data(path)"
    ]
   },
   {
