triplet correction resent model

--- a/notebooks/download_wildlifedatasets.ipynb
+++ b/notebooks/download_wildlifedatasets.ipynb
@@ -162,7 +162,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datasets.ELPephants.extract(os.path.join(path, 'ELPephants'))"
+   ]
   }
  ],
  "metadata": {
