make combined_datasets use cache if only_cache

--- a/notebooks/combine_datasets.ipynb
+++ b/notebooks/combine_datasets.ipynb
@@ -1396,6 +1396,255 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>species</th>\n",
+       "      <th>identity_id</th>\n",
+       "      <th>identity</th>\n",
+       "      <th>path</th>\n",
+       "      <th>from_video</th>\n",
+       "      <th>video</th>\n",
+       "      <th>date</th>\n",
+       "      <th>segmentation</th>\n",
+       "      <th>height</th>\n",
+       "      <th>width</th>\n",
+       "      <th>bbox</th>\n",
+       "      <th>area</th>\n",
+       "      <th>iscrowd</th>\n",
+       "      <th>keypoints</th>\n",
+       "      <th>num_keypoints</th>\n",
+       "      <th>orientation</th>\n",
+       "      <th>query</th>\n",
+       "      <th>metadata_split</th>\n",
+       "      <th>wildlife_name</th>\n",
+       "      <th>original_split</th>\n",
+       "      <th>width.1</th>\n",
+       "      <th>height.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>26</td>\n",
+       "      <td>whteag</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>England_G274</td>\n",
+       "      <td>raptor_individuals_cropped/whteag/England_G274...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>[[76.32499694824219, 33.875, 76.10311889648438...</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>[26.625, 33.875, 103.171875, 49.256248474121094]</td>\n",
+       "      <td>2238.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[50, 59, 2, 51, 61, 2, 50, 62, 2, 49, 67, 2, 5...</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>raptors</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22</td>\n",
+       "      <td>whteag</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>England_G274</td>\n",
+       "      <td>raptor_individuals_cropped/whteag/England_G274...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021.0</td>\n",
+       "      <td>[[119.8062515258789, 32.32500076293945, 119.13...</td>\n",
+       "      <td>431.0</td>\n",
+       "      <td>245.0</td>\n",
+       "      <td>[63.23749542236328, 32.32500076293945, 144.115...</td>\n",
+       "      <td>28482.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[130, 35, 2, 108, 48, 2, 111, 48, 2, 95, 51, 2...</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>raptors</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>whteag</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>England_G274</td>\n",
+       "      <td>raptor_individuals_cropped/whteag/England_G274...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>[[96.40469360351562, 64.26875305175781, 95.046...</td>\n",
+       "      <td>487.0</td>\n",
+       "      <td>869.0</td>\n",
+       "      <td>[55.67031478881836, 64.26875305175781, 609.657...</td>\n",
+       "      <td>91127.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[107, 73, 2, 89, 91, 2, 95, 91, 2, 59, 115, 2,...</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>raptors</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18</td>\n",
+       "      <td>whteag</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>England_G274</td>\n",
+       "      <td>raptor_individuals_cropped/whteag/England_G274...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>[[331.3984375, 151.8125, 329.4375, 153.7734375...</td>\n",
+       "      <td>837.0</td>\n",
+       "      <td>1255.0</td>\n",
+       "      <td>[298.0625, 151.8125, 672.6015625, 513.765625]</td>\n",
+       "      <td>98606.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[637, 371, 2, 643, 377, 2, 637, 377, 2, 637, 3...</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>raptors</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40</td>\n",
+       "      <td>whteag</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>England_G274</td>\n",
+       "      <td>raptor_individuals_cropped/whteag/England_G274...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>[[650.25, 414.0, 648.0, 416.25, 618.75, 416.25...</td>\n",
+       "      <td>1440.0</td>\n",
+       "      <td>1440.0</td>\n",
+       "      <td>[495.0, 414.0, 472.5, 717.75]</td>\n",
+       "      <td>206975.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[734, 425, 2, 678, 432, 2, 685, 432, 2, 594, 4...</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>raptors</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  image_id species  identity_id      identity  \\\n",
+       "0       26  whteag          3.0  England_G274   \n",
+       "1       22  whteag          3.0  England_G274   \n",
+       "2       28  whteag          3.0  England_G274   \n",
+       "3       18  whteag          3.0  England_G274   \n",
+       "4       40  whteag          3.0  England_G274   \n",
+       "\n",
+       "                                                path from_video  video  \\\n",
+       "0  raptor_individuals_cropped/whteag/England_G274...      False    NaN   \n",
+       "1  raptor_individuals_cropped/whteag/England_G274...      False    NaN   \n",
+       "2  raptor_individuals_cropped/whteag/England_G274...      False    NaN   \n",
+       "3  raptor_individuals_cropped/whteag/England_G274...      False    NaN   \n",
+       "4  raptor_individuals_cropped/whteag/England_G274...      False    NaN   \n",
+       "\n",
+       "     date                                       segmentation  height   width  \\\n",
+       "0  2020.0  [[76.32499694824219, 33.875, 76.10311889648438...   121.0   142.0   \n",
+       "1  2021.0  [[119.8062515258789, 32.32500076293945, 119.13...   431.0   245.0   \n",
+       "2  2020.0  [[96.40469360351562, 64.26875305175781, 95.046...   487.0   869.0   \n",
+       "3  2020.0  [[331.3984375, 151.8125, 329.4375, 153.7734375...   837.0  1255.0   \n",
+       "4  2022.0  [[650.25, 414.0, 648.0, 416.25, 618.75, 416.25...  1440.0  1440.0   \n",
+       "\n",
+       "                                                bbox      area  iscrowd  \\\n",
+       "0   [26.625, 33.875, 103.171875, 49.256248474121094]    2238.0      0.0   \n",
+       "1  [63.23749542236328, 32.32500076293945, 144.115...   28482.0      0.0   \n",
+       "2  [55.67031478881836, 64.26875305175781, 609.657...   91127.0      0.0   \n",
+       "3      [298.0625, 151.8125, 672.6015625, 513.765625]   98606.0      0.0   \n",
+       "4                      [495.0, 414.0, 472.5, 717.75]  206975.0      0.0   \n",
+       "\n",
+       "                                           keypoints  num_keypoints  \\\n",
+       "0  [50, 59, 2, 51, 61, 2, 50, 62, 2, 49, 67, 2, 5...           23.0   \n",
+       "1  [130, 35, 2, 108, 48, 2, 111, 48, 2, 95, 51, 2...           23.0   \n",
+       "2  [107, 73, 2, 89, 91, 2, 95, 91, 2, 59, 115, 2,...           23.0   \n",
+       "3  [637, 371, 2, 643, 377, 2, 637, 377, 2, 637, 3...           23.0   \n",
+       "4  [734, 425, 2, 678, 432, 2, 685, 432, 2, 594, 4...           23.0   \n",
+       "\n",
+       "   orientation  query metadata_split wildlife_name original_split  width.1  \\\n",
+       "0          NaN      0          train       raptors            NaN      NaN   \n",
+       "1          NaN      0          train       raptors            NaN      NaN   \n",
+       "2          NaN      0          train       raptors            NaN      NaN   \n",
+       "3          NaN      0          train       raptors            NaN      NaN   \n",
+       "4          NaN      0          train       raptors            NaN      NaN   \n",
+       "\n",
+       "   height.1  \n",
+       "0       NaN  \n",
+       "1       NaN  \n",
+       "2       NaN  \n",
+       "3       NaN  \n",
+       "4       NaN  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View the dataframe\n",
+    "pd.set_option(\"display.max_columns\",300)\n",
+    "cache_allbirds = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_allbirds_split.csv')\n",
+    "cache_allbirds.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
