--- a/notebooks/download_wildlife_ELPephant.ipynb
+++ b/notebooks/download_wildlife_ELPephant.ipynb
@@ -2509,10 +2509,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cache_raptors = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_raptors_split.csv')\n",
+    "cache_elephants = pd.read_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_elephants_split.csv')\n",
+    "\n",
+    "cache_raptors['wildlife_name'] = 'raptors'\n",
+    "cache_raptors['path'] = cache_raptors['path'].apply(lambda x: os.path.join('raptor_individuals_cropped', x))\n",
+    "\n",
+    "cache_elephants['wildlife_name'] = 'ELPephant'\n",
+    "cache_elephants['path'] = cache_elephants['path'].apply(lambda x: os.path.join('ELPephant', x))\n",
+    "\n",
+    "cache_raptor_elephants = pd.concat([cache_raptors, cache_elephants], ignore_index=True)\n",
+    "cache_raptor_elephants.to_csv('/Users/amee/Documents/code/master-thesis/EagleID/dataset/dataframe/cache_raptors_elephants_split.csv', index=False) # save with _split bc already split inidivdually"
+   ]
   }
  ],
  "metadata": {
