--- a/notebooks/download_wildlife_ELPephant.ipynb
+++ b/notebooks/download_wildlife_ELPephant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "\n",
     "path = '/Users/amee/Documents/code/master-thesis/datasets/ELPephant'\n",
     "\n",
-    "wildlife_name = 'elephant'\n",
+    "wildlife_name = 'ELPephant'\n",
     "\n",
     "dataset = datasets.ELPephants(path)\n"
    ]
